Clean up the UI for EP ratios and make sure they only show when multiple EP columns are visible.

--- a/ui/scss/core/sim_ui/_shared.scss
+++ b/ui/scss/core/sim_ui/_shared.scss
@@ -104,6 +104,10 @@ td, th {
 .hide-in-front-of-target .in-front-of-target {
 	display: none !important;
 }
+
+.hide-ep-ratios .ep-ratios {
+	display: none !important;
+}
 // END TODO
 
 @include media-breakpoint-down(lg) {
